<resources>
    <string name="app_name">Github Client</string>
    <string name="test_text">Este es un texto de prueba</string>
    <string name="repo_name">Nombre del Repositorio</string>
    <string name="repo_desc">Descripción Repositorio</string>
    <string name="repo_lang">Lenguaje</string>
    <string name="text_lang">Kotlin</string>
    <string name="cancel">Cancelar</string>
    <string name="save">Guardar</string>

    <!--Pantalla Login -->
    <string name="user">Usuario</string>
    <string name="password">Contraseña</string>
    <string name="login">Ingresar</string>

</resources>