<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".RepoItem">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="16dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.google.android.material.card.MaterialCardView
                android:layout_width="100dp"
                android:layout_height="100dp"
                app:cardCornerRadius="50dp">

                <ImageView
                    android:id="@+id/repo_owner_image"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="centerCrop"
                    android:src="@drawable/ic_launcher_foreground" />

            </com.google.android.material.card.MaterialCardView>

            <!-- ACTION BUTTONS (EDIT + DELETE) -->
            <LinearLayout
                android:id="@+id/actionsContainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal"
                android:layout_marginTop="8dp">

                <ImageButton
                    android:id="@+id/editFab"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_marginEnd="12dp"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:src="@drawable/baseline_edit_24"
                    app:tint="@color/magenta" />

                <ImageButton
                    android:id="@+id/deleteFab"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:src="@drawable/baseline_delete_24"
                    app:tint="@color/magenta" />

            </LinearLayout>

        </LinearLayout>

        <!-- INFORMACIÓN DEL REPO -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginStart="16dp">

            <!-- Nombre del repositorio -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:text="@string/repo_name"
                    android:padding="8dp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/repo_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/test_text"
                    android:padding="8dp" />

            </LinearLayout>

            <!-- Descripción -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:text="@string/repo_desc"
                    android:padding="8dp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/repo_description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/test_text"
                    android:padding="8dp" />
            </LinearLayout>

            <!-- Lenguaje -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:text="@string/repo_lang"
                    android:padding="8dp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/repo_lang"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/text_lang"
                    android:padding="8dp" />
            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</FrameLayout>
